--- a/Elite_Training_Club/Elite_Training_Club/Views/Account/Register.cshtml
+++ b/Elite_Training_Club/Elite_Training_Club/Views/Account/Register.cshtml
@@ -27,7 +27,8 @@
             <input type="hidden" asp-for="Headquarters" />
 
             <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
+               <span class="required">*</span>
+               <label asp-for="Username" class="control-label"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
@@ -35,6 +36,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
+                        <span class="required">*</span>
                         <label asp-for="Password" class="control-label"></label>
                         <input asp-for="Password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
@@ -42,6 +44,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
+                        <span class="required">*</span>
                         <label asp-for="PasswordConfirm" class="control-label"></label>
                         <input asp-for="PasswordConfirm" class="form-control" />
                         <span asp-validation-for="PasswordConfirm" class="text-danger"></span>
